# nicevoice-app

./: .gitignore  .tasks.json  AppIcon.icns  Bundler.toml  CLAUDE.md  NiceVoice.entitlements  Package.resolved  Package.swift  README.md  package-lock.json  package.json  requirements.md  voice-input-app-requirements.md
.github/workflows/: ci.yml  release-build.yml
Casks/: nicevoice.rb
Homebrew/Casks/: nicevoice.rb
NiceVoice/: Bundler.toml
Resources/: speech-recognition.html
Scripts/: benchmark.swift  build.sh  compile-xcstrings.swift  debug-run.sh  generate-appcast.sh  generate-test-audio.mjs  notarize.sh  obfuscate-string.swift  package-app.sh  punctuation-benchmark.swift  release.sh  set-access-mode.swift  verify-build.sh
Server/: LICENSE  pyproject.toml
Server/qwen3asr/: pyproject.toml  server.py
Server/voxmlx/: __init__.py  audio.py  cache.py  convert.py  encoder.py  generate.py  language_logits.py  language_model.py  model.py  server.py  stream.py  weights.py
Sources/NiceVoice/: AppDelegate.swift  AppLogging.swift  AppState.swift  AppSupport.swift  AppUpdateManager.swift  AudioSupport.swift  AuthManager.swift  BatchTranscriptionService.swift  BatchTranscriptionView.swift  ChromeSpeechService.swift  Constants.swift  DeepgramService.swift  DeveloperView.swift  DictionaryViews.swift  FillerDetectionService.swift  FloatingPanel.swift  FloatingPanelIndicatorViews.swift  FloatingPanelStyles.swift  FocusedElementInspector.swift  HistoryViews.swift  KeyMonitor.swift  KeychainService.swift  KeychainStorage.swift  LicenseAccess.swift  LicenseManager.swift  LocalASRService.swift  LocalServerManager.swift  LocalStorage.swift  MainViews.swift  MicrophonePermission.swift  ModelDownloadManager.swift  Models.swift  NiceVoice.swift  NukosukuAuthService.swift  ObfuscatedStrings.swift  OnboardingView.swift  PinnedURLSession.swift  RuntimeSupport.swift  SettingsSupportViews.swift  SettingsViews.swift  (+13 more)
Sources/NiceVoice/Resources/: Localizable.xcstrings
Tests/NiceVoiceTests/: AppFeatureFlagsTests.swift  FocusedElementInspectorTests.swift  LicenseAccessTests.swift  LocalServerEndpointTests.swift  PasteBehaviorTests.swift  RuntimeSupportTests.swift  ShortcutKeyTests.swift  TextProcessorTests.swift
Updates/: README.md
api/: package.json  tsconfig.json  wrangler.toml
api/src/: index.ts
benchmark-audio/: manifest.json  punctuation-tests.json
docs/: access-modes.md  license-access.md  release.md
landing/: commercial.html  index.html  legal.css  privacy.html  script.js  style.css  terms.html  updates.html
