[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "voxmlx"
version = "0.0.2"
description = "Voxtral Mini Realtime speech-to-text in MLX"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "numpy",
    "soundfile",
    "sounddevice",
    "huggingface-hub",
    "mistral-common>=1.8.7",
    "sentencepiece",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]"]

[tool.setuptools.packages.find]
include = ["voxmlx"]

[dependency-groups]
dev = [
    "fastapi>=0.135.2",
    "mlx-qwen3-asr>=0.3.2",
    "ruff>=0.15.7",
    "ty>=0.0.25",
    "uvicorn[standard]>=0.42.0",
]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[project.scripts]
voxmlx = "voxmlx:main"
voxmlx-convert = "voxmlx.convert:main"
voxmlx-serve = "voxmlx.server:main"
