[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3asr-server"
version = "0.0.2"
requires-python = ">=3.10"
dependencies = [
    "mlx-qwen3-asr>=0.2.0",
    "numpy",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]"]

[tool.setuptools]
packages = ["qwen3asr"]
package-dir = {"qwen3asr" = "."}

[dependency-groups]
dev = [
    "fastapi>=0.135.2",
    "ruff>=0.15.7",
    "ty>=0.0.25",
    "uvicorn[standard]>=0.42.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[project.scripts]
qwen3asr-serve = "qwen3asr.server:main"
